code align fixed2

--- a/_sass/_teaching.scss
+++ b/_sass/_teaching.scss
@@ -127,6 +127,8 @@ section.course-tp {
         }
         &.highlight {
             text-align: left;
+            padding: 0;
+            margin: 0.5em;
         }
     }
     ul.algorithm {
